# summation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  overview.pptx
.github/workflows/: build.yml
cmake/: benchmark.cmake  doctest.cmake  eve.cmake  tbb.cmake
cmake/toolchain/: linux-clang.cmake  linux-clang19.cmake  linux-gcc14.cmake  linux.cmake  macos-brew-clang.cmake  macos-brew-gcc14.cmake  macos-cc.cmake  macos.cmake  windows.cmake  x86_64-w64-mingw32.cmake
include/sum/: output.hpp  sum.hpp
source/: CMakeLists.txt  kahan.hpp  main.cpp  output.cpp  sum_accumulate.cpp  sum_accumulate_long.cpp  sum_kahan.cpp  sum_kahan_long.cpp  sum_kahan_vec16.cpp  sum_kahan_vec4.cpp  sum_kahan_vec8.cpp  sum_loop.cpp  sum_loop_long.cpp  sum_reduce.cpp  sum_reduce_par.cpp  sum_reduce_par_unseq.cpp  sum_reduce_seq.cpp  sum_reduce_simd.cpp  sum_reduce_unseq.cpp  sum_transform.cpp  sum_transform_par.cpp  sum_transform_par_unseq.cpp  sum_transform_seq.cpp  sum_transform_simd.cpp  sum_transform_unseq.cpp  sum_vec.cpp  sum_vec16.cpp  sum_vec2.cpp  sum_vec4.cpp  sum_vec8.cpp
tests/: CMakeLists.txt  output_test.cpp  plot.py  plot_old.py  sum_bm.cpp  sum_test.cpp
